# linken

./: Dockerfile  Dockerfile.v1  Dockerfile.v2  README.md  TODO.md  justfile
Dockerfiles/: Dockerfile_base  Dockerfile_build
companion/: eeveec.Dockerfile
docs/: architecture.md  building.md  commands.md  nextflow.md
nextflow/: pipeline_001.nf  pipeline_list.json
scripts/: amplicon-dist.py  eevee.py  linken.py  lunar.py  ont-vcall.py  wrap60.py
src/eevee/: .gitignore  pyproject.toml
src/eevee/coverage/: __init__.py  coverage.py
src/eevee/eevee/: __init__.py  eevee.py  eevee_bulk.py
src/eevee/substitution/: genbank_writer.py  reference_table.py  residue_variant.py  substitution.py  substitution_ext.py
src/hermes/: go.mod  main.go
src/hermes/model/: model.go
src/hermes/process/: dir.go  process.go  script.go
src/hermes/process/templates/: call.sh  coverage.sh  map.sh  residue.sh  trimgalore.sh  variant-tsv.sh
src/lunar/: .gitignore  pyproject.toml
src/lunar/lunar_cli/: doctor.py  index_manager.py  lunar.py
